@@ -2,12 +2,11 @@ package com.booking.perspective.media.service;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import org.apache.commons.codec.binary.Base64;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,15 +16,15 @@ import org.springframework.stereotype.Service;
 @Service
 public class FileService {
     
-    private final String mediaPath;
+    private final String mediaStoragePath;
     
     @Autowired
-    public FileService(@Value("${media.path}") String mediaPath) {
-        this.mediaPath = mediaPath;
+    public FileService(@Value("${media.storage.path}") String mediaStoragePath) {
+        this.mediaStoragePath = mediaStoragePath;
     }
     
     public void save(ByteArrayOutputStream outputStream, String id) {
-        Path path = Path.of(mediaPath, id);
+        Path path = Path.of(mediaStoragePath, id);
         try {
             byte[] base64 = Base64.encodeBase64(outputStream.toByteArray());
             Files.copy(new ByteArrayInputStream(base64), path);
@@ -34,13 +33,12 @@ public class FileService {
         }
     }
     
-    public List<String> getAll() {
-        return Arrays.stream(new File(mediaPath).listFiles()).filter(e -> e.isFile())
-                .filter(e -> !e.isHidden()).map(e -> {
+    public List<String> get(Collection<String> ids) {
+        return ids.stream().map(id -> Path.of(mediaStoragePath, id)).map(path -> {
             try {
-                return new String(Files.readAllBytes(e.toPath()));
+                return Files.readString(path);
             } catch (IOException ex) {
-                throw new RuntimeException(ex);
+                throw new UncheckedIOException(ex);
             }
         }).toList();
     }
